--- a/Vector/Vector.vcxproj.filters
+++ b/Vector/Vector.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Source.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="Getche.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
