--- a/Class_and_Object/Class_and_Object.vcxproj.filters
+++ b/Class_and_Object/Class_and_Object.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Cards.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="CardDeck.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
